--- a/Sample Code/app/src/main/res/layout/view_three_btn.xml
+++ b/Sample Code/app/src/main/res/layout/view_three_btn.xml
@@ -7,15 +7,17 @@
         android:background="#FFFFFF"
         android:clickable="true"
         tools:context="com.dji.sdk.sample.common.MainActivity"
-    android:weightSum="1">
+    android:weightSum="8">
 
     <com.dji.sdk.sample.common.BaseFpvView style="@style/fpv"
-        android:layout_marginTop="100dp" />
+        android:layout_marginTop="0dp"
+                                           android:layout_weight="4"/>
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="horizontal">
+        android:orientation="horizontal"
+        >
         <TextView
            android:id="@+id/text_info"
            android:layout_width="match_parent"
